tests/errors/sem13.kt
fun foo(x: Int, y: Int) {}

fun main() {
    foo(1); // too few
}